fix leaderboard width on mobile

--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -11,6 +11,7 @@
   flex: 1;
   margin: 5rem auto 0;
   max-width: 55rem;
+  min-width: 23.375rem;
 
   @include media-breakpoint-up('md') {
     width: 90%;
